// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchItem should render search details with link to results page  1`] = `
<Connect(I18NLink)
  className="semantic-search-list-item"
  to="semanticsearch/id"
>
  <div
    className="item-header"
  >
    query
    <button
      className="btn btn-danger delete-search"
      onClick={[Function]}
    >
      <Component
        icon="trash-alt"
      />
    </button>
  </div>
  <div />
</Connect(I18NLink)>
`;

exports[`SearchItem when search status is inProgress should render in-progress icon, progress bar and stop button 1`] = `
<Connect(I18NLink)
  className="semantic-search-list-item"
  to="semanticsearch/id"
>
  <div
    className="item-header"
  >
    query
    <button
      className="btn btn-danger delete-search"
      onClick={[Function]}
    >
      <Component
        icon="trash-alt"
      />
    </button>
    <button
      className="btn btn-warning stop-search"
      onClick={[Function]}
    >
      <Component
        icon="stop"
      />
    </button>
  </div>
  <div>
    <ProgressBar
      max={0}
      value={0}
    />
  </div>
</Connect(I18NLink)>
`;

exports[`SearchItem when search status is stopped should render progress bar and resume button 1`] = `
<Connect(I18NLink)
  className="semantic-search-list-item"
  to="semanticsearch/id"
>
  <div
    className="item-header"
  >
    query
    <button
      className="btn btn-danger delete-search"
      onClick={[Function]}
    >
      <Component
        icon="trash-alt"
      />
    </button>
    <button
      className="btn btn-success resume-search"
      onClick={[Function]}
    >
      <Component
        icon="play"
      />
    </button>
  </div>
  <div>
    <ProgressBar
      max={0}
      value={0}
    />
  </div>
</Connect(I18NLink)>
`;
